# myconf

./: .editorconfig  .gitignore  README.org  cabal.project  config.org  default.nix  environments.org  flake.nix  nil  package.json  pnpm-workspace.yaml  repl.nix  result  resume.org  scratch.org  setup.sh  shell.nix
dotfiles/: .Brewfile  .oh-my-posh.zsh.yaml  .zprofile  .zshenv  .zshrc  README.org
emacs/custom/: frame-order.org
emacs/doom/: config.el  custom.el  init.el  packages.el
emacs/doom/config.d/: tidal.el
emacs/doom/themes/: one-dark-theme.el
emacs/haskell-modules/: TAGS  my-emacs-native.cabal
emacs/haskell-modules/bench/: EmacsPrettyBenchmark.hs
emacs/haskell-modules/cbits/: emacs_wrapper.c
emacs/haskell-modules/lib/Emacs/: Init.hs
emacs/haskell-modules/lisp/: my-haskell-modules.el
emacs/haskell-modules/src/Data/Emacs/: Encode.hs
emacs/haskell-modules/src/Data/Emacs/Properties/: Pretty.hs  Text.hs
emacs/haskell-modules/src/Emacs/: GHC.hs
emacs/haskell-modules/tests/: EmacsPrettyTest.hs
emacs/lisp/: az-cli.el  bicep-mode.el  confpkg.el  cssfaces.el  haskell-ts-mode.el  my-dashboard.el  nx-mode.el
emacs/profiles/simple/: init.el
home/: roel.nix
home-manager/: roel.nix
hosts/darwin/: default.nix
hosts/darwin/home-imac/: default.nix
hosts/darwin/home-studio/: default.nix
lib/: default.nix
lib/elisp/: default.nix  file.nix
lib/myconf/: default.nix  types.nix
libs/my-nix-utils/: flake.nix
modules/darwin/: default.nix
modules/darwin/programs/: arduino-ide.nix  browsers.nix
modules/darwin/services/: yabai.nix
modules/emacs/: default.nix  emacs.nix  environment.nix  initDirectory.nix  server.nix
modules/emacs/doom/: default.nix  environment.nix  init.nix
modules/home-manager/: default.nix
modules/home-manager/emacs/: config.nix  doom.nix
modules/home-manager/languages/: agda.nix  arduino.nix  bicep.nix  cc.nix  clojure.nix  coq.nix  (+42 more)
modules/shared/: default.nix  essentials.nix
overlays/: custom-pkgs.nix  emacs.nix  me.nix  myconf.nix  python.nix  tree-sitter.nix
pkgs/bicep-langserver/: default.nix  deps.nix
pkgs/dhall-elisp/: README.md  dhall-elisp.cabal
pkgs/doomemacs/: default.nix
pkgs/emacs/: builder.el  default.nix  elisp-packages.nix  elisp.nix  example.org  launch-editor.nix  launch-editor.sh  myconf-elisp-values.nix  org-cv.nix  org-tangle.el  org-tangle.nix
pkgs/emacs-zsh-plugin/: default.nix
pkgs/hs-elisp/: hs-elisp.cabal
pkgs/me/: default.nix  package.dhall  public.dhall  schema.dhall
pkgs/mycolors/: package.dhall
pkgs/myconf/: default.nix
setup/: README.org  default.nix  eval-emacs-config.nix
(+45 files in other folders)
