cabal-version: 3.0

name:
  my-emacs-native
version:
  0.1
synopsis:
  Emacs modules implemented in Haskell
author:
  Roel Hemerik

build-type:
  Simple

flag runtime-checks
  description:
    Enable more runtime checks
  default:
    False
  manual:
    True

common ghc-options
  default-language:
    GHC2021

  build-depends:
    , base ^>= 4.17

  default-extensions:
    LambdaCase
    UnboxedTuples

  ghc-options:
    -Weverything
    -Wno-redundant-constraints
    -Wno-all-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 8.8)
     ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
     ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
     ghc-options:
      -Wno-missing-poly-kind-signatures

library
  import: ghc-options
  if flag(runtime-checks)
    cpp-options: -DRUNTIME_CHECKS
  exposed-modules:
    Data.Emacs.Encode
    Data.Emacs.Properties.Text
    Data.Emacs.Properties.Pretty
    Emacs.GHC
  hs-source-dirs:
    src
  build-depends:
    , async >= 2
    , atomic-counter
    , bimap
    , bytestring
    , containers
    , deepseq
    , directory
    , emacs-module >= 0.2.1
    , exceptions
    , file-io
    , filepath >= 1.4.100 && < 1.5
    , lifted-async
    , monad-control
    , prettyprinter >= 1.7
    , prettyprinter-combinators
    , primitive
    , regex-tdfa
    , stm
    , stm-chans
    , mtl
    , transformers
    , lens
    , text
    , either
    , template-haskell
    , text-builder-linear
    , vector >= 0.13

foreign-library my-emacs-native
  import: ghc-options
  type:
    native-shared
  c-sources:
    cbits/emacs_wrapper.c
  includes:
    emacs-module.h
  install-includes:
    emacs-module.h
  include-dirs:
    cbits

  build-depends:
    , base ^>= 4.17
    , emacs-module
    , my-emacs-native

  hs-source-dirs:
    lib
  other-modules:
    Emacs.Init
  ghc-options:
    -threaded

test-suite emacs-pretty-tests
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is: EmacsPrettyTest.hs
  build-depends:
    , HUnit
    , QuickCheck
    , my-emacs-native
  hs-source-dirs: tests

benchmark emacs-pretty-benchmark
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is: EmacsPrettyBenchmark.hs
  build-depends:
    , my-emacs-native
    , criterion
    , random
    , prettyprinter
    , deepseq
  hs-source-dirs: bench
